# zabbix_34x_next

./: .appveyor.yml  .gitignore  .travis.yml  BUILD.md  BUILD.ru.md  ChangeLog  Makefile.am  Makefile.in  PATCHLIST.md  PATCHLIST.ru.md  README  README.md  README.ru.md  aclocal.m4  configure  configure.ac
.github/: FUNDING.yml
conf/: zabbix_agentd.conf  zabbix_agentd.win.conf  zabbix_proxy.conf  zabbix_server.conf
create/src/: data.tmpl  schema.tmpl
database/ibm_db2/: data.sql  schema.sql
database/mysql/: data.sql  schema.sql
database/oracle/: data.sql  schema.sql
database/postgresql/: data.sql  schema.sql
database/sqlite3/: data.sql  schema.sql
frontends/php/: graphs.php  host_prototypes.php  httpdetails.php  items.php  jsLoader.php  latest.php  overview.php  popup_trexpr.php  report2.php
frontends/php/app/controllers/: CControllerAcknowledgeEdit.php  CControllerMediatypeList.php
frontends/php/app/views/: administration.mediatype.list.php  administration.proxy.list.php  administration.script.list.php  monitoring.dashboard.view.php  monitoring.problem.view.php  monitoring.widget.clock.view.php  monitoring.widget.navigationtree.view.php  monitoring.widget.problems.view.php  monitoring.widget.sysmap.view.php
frontends/php/include/: db.inc.php  defines.inc.php  events.inc.php  forms.inc.php  func.inc.php  html.inc.php  maps.inc.php
frontends/php/include/views/: administration.auditacts.list.php  administration.auditlogs.list.php  administration.usergroups.list.php  administration.users.list.php  monitoring.charts.php  (+29 more)
frontends/php/js/: dashboard.grid.js  gtlc.js
include/: alias.h  cfg.h  common.h  comms.h  config.h.in  daemon.h  db.h  dbcache.h  log.h  memalloc.h  module.h  perfmon.h  proxy.h  service.h  strpool.h  symbols.h  sysinfo.h  threads.h  version.h  zbxdb.h  zbxhistory.h  zbxjson.h  zbxmedia.h  zbxodbc.h  zbxregexp.h  zbxself.h  zbxserialize.h  zbxtasks.h  zbxtypes.h
m4/: ax_lib_oracle_oci.m4  pcre.m4
packaging/rpm/: fping3-sourceip-option.patch  zabbix-java-gateway.init  zabbix.spec  zabbix_java_gateway-sysd
sass/stylesheets/sass/: _colors.scss  screen.scss
src/: Makefile.am  Makefile.in
src/libs/zbxalgo/: algodefs.c  binaryheap.c  evaluate.c  hashmap.c  hashset.c  queue.c  vectorimpl.h
src/libs/zbxcommon/: Makefile.am  alias.c  comms.c  file.c  iprange.c  misc.c  setproctitle.c  str.c  xml.c
src/libs/zbxcomms/: comms.c  telnet.c
src/libs/zbxcommshigh/: Makefile.am
src/libs/zbxconf/: Makefile.am  cfg.c
src/libs/zbxcrypto/: Makefile.am  Makefile.in  base64.c  tls.c  tls.h
src/libs/zbxdb/: Makefile.in  db.c
src/libs/zbxdbcache/: Makefile.am  Makefile.in  dbcache.c  dbconfig.c  dbconfig.h  dbconfig_dump.c  dbsync.c  valuecache.c  valuecache.h
src/libs/zbxdbhigh/: Makefile.am  Makefile.in  db.c  dbschema.c  discovery.c  event.c  host.c  itservices.c  lld.c  lld_graph.c  lld_host.c  lld_item.c  lld_trigger.c  odbc.c  proxy.c  template_item.c  trigger.c
src/libs/zbxdbupgrade/: Makefile.am  dbupgrade.c  dbupgrade_2010.c  dbupgrade_2050.c  dbupgrade_3010.c  dbupgrade_3040.c
src/libs/zbxexec/: execute.c
src/libs/zbxhistory/: history.c  history.h  history_elastic.c  history_sql.c
src/libs/zbxhttp/: Makefile.am  punycode.c  urlencode.c
src/libs/zbxicmpping/: icmpping.c
src/libs/zbxipcservice/: ipcservice.c
src/libs/zbxjson/: json.c  json_parser.c
src/libs/zbxlog/: Makefile.in  log.c
src/libs/zbxmedia/: email.c  eztexting.c
src/libs/zbxmemory/: Makefile.am  memalloc.c  strpool.c
src/libs/zbxmodules/: modules.c
src/libs/zbxnix/: Makefile.in  control.h  daemon.c  fatal.c  sigcommon.h  sighandler.c
src/libs/zbxregexp/: zbxregexp.c
src/libs/zbxself/: Makefile.in  selfmon.c
src/libs/zbxserver/: Makefile.am  evalfunc.c  expression.c
src/libs/zbxsys/: Makefile.am  Makefile.in  mutexs.c  symbols.c  threads.c
src/libs/zbxsysinfo/: sysinfo.c
src/libs/zbxtasks/: task.c
src/libs/zbxwin32/: fatal.c  perfmon.c  service.c
src/zabbix_agent/: Makefile.am  Makefile.in  active.c  cpustat.c  cpustat.h  diskdevices.c  diskdevices.h  eventlog.c  eventlog.h  listener.c  logfiles.c  perfstat.c  perfstat.h  procstat.c  stats.c  vmstats.c  zabbix_agentd.c  zbxconf.c  zbxconf.h
src/zabbix_get/: Makefile.am  zabbix_get.c
src/zabbix_java/: Makefile.am
src/zabbix_proxy/: Makefile.am  Makefile.in  events.c  proxy.c  servercomms.c
src/zabbix_proxy/datasender/: datasender.c
src/zabbix_proxy/heart/: heart.c
src/zabbix_proxy/housekeeper/: housekeeper.c
src/zabbix_proxy/proxyconfig/: proxyconfig.c
src/zabbix_proxy/taskmanager/: Makefile.am  taskmanager.c
src/zabbix_sender/: Makefile.am  zabbix_sender.c
src/zabbix_server/: Makefile.am  Makefile.in  actions.c  events.c  events.h  operations.c  server.c
src/zabbix_server/alerter/: Makefile.am  alert_manager.c  alerter.c  alerter.h  alerter_protocol.c
src/zabbix_server/dbconfig/: dbconfig.c
src/zabbix_server/dbsyncer/: dbsyncer.c
src/zabbix_server/discoverer/: discoverer.c
src/zabbix_server/escalator/: escalator.c
src/zabbix_server/housekeeper/: housekeeper.c
src/zabbix_server/httppoller/: Makefile.am  httpmacro.c  httppoller.c  httptest.c
src/zabbix_server/ipmi/: Makefile.am  checks_ipmi.c  ipmi_manager.c  ipmi_poller.c  ipmi_protocol.c
src/zabbix_server/pinger/: pinger.c
src/zabbix_server/poller/: Makefile.am  checks_aggregate.c  checks_calculated.c  checks_db.c  checks_external.c  checks_internal.c  checks_simple.c  checks_simple_vmware.c  checks_snmp.c  poller.c
src/zabbix_server/preprocessor/: Makefile.am  item_preproc.c  preproc_manager.c  preprocessing.c
src/zabbix_server/proxypoller/: proxypoller.c
src/zabbix_server/scripts/: Makefile.am
src/zabbix_server/selfmon/: selfmon.c
src/zabbix_server/snmptrapper/: snmptrapper.c
src/zabbix_server/taskmanager/: Makefile.am  proxy_tasks.c  taskmanager.c
src/zabbix_server/timer/: timer.c
src/zabbix_server/trapper/: Makefile.am  Makefile.in  active.c  proxyautoreg.c  proxyconfig.c  proxydata.c  proxydiscovery.c  proxyhosts.c  trapper.c
src/zabbix_server/vmware/: Makefile.in  vmware.c
(+152 files in other folders)
